objects/nFORCE__Usage_Analytics_Generic_Event__c.object
<CustomObject>
    <fields>
        <fullName>nFORCE__Body__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Executing_User_Hash__c</fullName>
        <description>The system populates this text field with a hash of the UserId of the user that initiated the call to the resource exposure API. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Executing User Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Topic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Usage Analytics Generic Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Analytics Generic Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>